# crewai-remotion

./: .env.example  .gitignore  README.md  crewai-remotion  pyproject.toml
assets/music/: manifest.json
assets/music/upbeat/: placeholder.txt
assets/sfx/: README.md  manifest.json
brands/: default.brand.yaml  schema.brand.yaml
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: Root.tsx  schema.ts
remotion/src/catalog/: lottie.json  motion-graphics.ts
remotion/src/compositions/: SocialVertical.tsx
remotion/src/design/: cuts.ts  motion.ts  tokens.ts
remotion/src/layers/: BackgroundLayer.tsx  CaptionLayer.tsx  MotionGraphicsLayer.tsx  ParallaxLayer.tsx  SFXLayer.tsx  SceneSubjectLayer.tsx
remotion/src/scenes/: BeatScene.tsx
scripts/: find_domains.py
scripts/domain_finder/: README.md  __init__.py  analyzers.py  generator.py  porkbun_client.py  run.py
src/crewai_remotion/: __init__.py  config.py  errors.py  main.py
src/crewai_remotion/cli/: __init__.py  app.py  brand_resolve.py  brand_wizard.py  errors.py  preflight.py  topic_prompts.py  validate.py
src/crewai_remotion/crews/: __init__.py  _common.py  llm.py
src/crewai_remotion/delivery/: __init__.py  package.py
src/crewai_remotion/gates/: __init__.py  av_script.py  change_control.py  clearance.py  complexity_budget.py  composed_frames.py  coordinator.py  creative_brief.py  hook_selection.py  picture_lock.py  qc_router.py  storyboard.py  style_frames.py  topic_ambiguity.py
src/crewai_remotion/loops/: __init__.py  flywheel.py  qa_vision.py  termination.py  trace.py
(+69 files in other folders)
